{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 13,
  "lineage": "d0943670-8040-dd5b-71ea-1c23f8c1e53c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:internet-gateway/igw-0e07e9a48a8fdef6c",
            "id": "igw-0e07e9a48a8fdef6c",
            "owner_id": "175562787802",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-073b1f22efa67f591"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "igw-0e07e9a48a8fdef6c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "my_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e07e9a48a8fdef6c",
            "id": "r-rtb-04d7d9edf553427f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-04d7d9edf553427f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-04d7d9edf553427f3"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:route-table/rtb-04d7d9edf553427f3",
            "id": "rtb-04d7d9edf553427f3",
            "owner_id": "175562787802",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-073b1f22efa67f591"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "rtb-04d7d9edf553427f3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265e87267150849a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-04d7d9edf553427f3",
            "subnet_id": "subnet-0d897ab34520a57ac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "rtbassoc-0265e87267150849a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_route_table.my_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:security-group/sg-0c74b590c812b4916",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c74b590c812b4916",
            "ingress": [],
            "name": "tf-web-sg",
            "name_prefix": "",
            "owner_id": "175562787802",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-web-sg"
            },
            "tags_all": {
              "Name": "tf-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-073b1f22efa67f591"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "sg-0c74b590c812b4916",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:subnet/subnet-0d897ab34520a57ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d897ab34520a57ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "175562787802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "tf-subnet-public"
            },
            "tags_all": {
              "Name": "tf-subnet-public"
            },
            "vpc_id": "vpc-073b1f22efa67f591"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "subnet-0d897ab34520a57ac",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:vpc/vpc-073b1f22efa67f591",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-099ef170b81b5c9bf",
            "default_route_table_id": "rtb-00cf7d3c92628bb67",
            "default_security_group_id": "sg-0d87c105a16679a21",
            "dhcp_options_id": "dopt-0642145d2d9344ad4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073b1f22efa67f591",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cf7d3c92628bb67",
            "owner_id": "175562787802",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "vpc-073b1f22efa67f591",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "my_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:security-group-rule/sgr-0e299f97d404b79c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e299f97d404b79c4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0c74b590c812b4916",
            "security_group_rule_id": "sgr-0e299f97d404b79c4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "sgr-0e299f97d404b79c4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "my_inbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:175562787802:security-group-rule/sgr-0aaafbf30c9e289f7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0aaafbf30c9e289f7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0c74b590c812b4916",
            "security_group_rule_id": "sgr-0aaafbf30c9e289f7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "175562787802",
            "id": "sgr-0aaafbf30c9e289f7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}